--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 			<ul>
 				<li><a title="Twitter" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
 				<li><a title="Twitter" href="{{ site.twitter }}" target="_blank">Twitter</a></li>
-				<li><a title="Github" href="{{ site.github }}" target="_blank">Github</a></li>
+				<li><a title="Fiverr" href="{{ site.fiverr }}" target="_blank">Fiverr</a></li>
 			</ul>
 		</section>
 	</div>
